--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">StateMachine</string>
+    <string name="txt_login">Login</string>
+    <string name="txt_skip_to_main_screen">Skip(To Main Screen)</string>
 </resources>
