--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">StateMachine</string>
     <string name="txt_login">Login</string>
     <string name="txt_skip_to_main_screen">Skip(To Main Screen)</string>
+    <string name="txt_splash_screen">Splash Screen</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
